--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
     "latest": "^0.2.0",
     "primeicons": "^7.0.0",
@@ -19,11 +18,11 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "recoil": "^0.7.7",
-    "recoil-persist": "^5.1.0",
-    "tailwindcss": "^4.0.3"
+    "recoil-persist": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@tailwindcss/vite": "^4.1.8",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -32,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "tailwindcss": "^4.1.8",
     "vite": "^6.0.5"
   }
 }
